--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Broadway</title>
+	<title>Broadway Design</title>
+	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+<div class="image">
+<h1>Broadway Design</h1>
+  <p> 
+	<a class="nav-btn" href="#">Home</a>
+  </p>
+  <p> 
+	<a class="nav-btn" href="#">About</a>
+  </p>
+  <p> 
+	<a class="nav-btn" href="#">Work</a>
+  </p>
+  <p> 
+	<a class="nav-btn" href="#">Team</a>
+  </p>
+  <p> 
+	<a class="nav-btn" href="#">Contact</a>
+  </p>
+</div>
+<h2>Our Process</h2>
+<div class="process">	
+	<img src="resources/images/identify.svg">
+	<h3>Identify</h3>
+	<p>We focus on the most important details.</p>
+</div>	
+<div class="process">	
+	<img src="resources/images/understand.svg">
+	<h3>Understand</h3>
+	<p>We study our projects inside and out.</p>
+</div>
+<div class="process">	
+	<img src="resources/images/execute.svg">
+	<h3>Execute</h3>
+	<p>We put everything we have into our work.</p>
+</div>
+<div class="image">
+<h2>Designed in New York</h2>
+</div>
+<div class="misc">	
+	<h3>Portfolio</h3>
+	<p>Coming Soon</p>
+</div>	
+<div class="misc">	
+	<h3>Team</h3>
+	<p>We're Hiring!</p>
+</div>
+<div class="misc">	
+	<h3>Contact</h3>
+	<p>Phone: (555)-555-5555</p>
+	<p>E-mail: test@example.com</p>
+	<p>Twitter: @test</p>
+</div>
+<div class="footer">
+<p>
+        © Broadway 2017
+        <a class="btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#about">About</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#contact">Contact</a>
+</p>
+</div>
 </body>
 </html>
