--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
 </head>
 <body>
 <div class="image">
-<h1>Broadway Design</h1>
+<h1 class="top">Broadway Design</h1>
   <p> 
 	<a class="nav-btn" href="#">Home</a>
   </p>
   <p> 
-	<a class="nav-btn" href="#">About</a>
+	<a class="nav-btn" href="#about">About</a>
   </p>
   <p> 
-	<a class="nav-btn" href="#">Work</a>
+	<a class="nav-btn" href="#work">Work</a>
   </p>
   <p> 
-	<a class="nav-btn" href="#">Team</a>
+	<a class="nav-btn" href="#team">Team</a>
   </p>
   <p> 
-	<a class="nav-btn" href="#">Contact</a>
+	<a class="nav-btn" href="#contact">Contact</a>
   </p>
 </div>
-<h2>Our Process</h2>
-<div class="process">	
+<h2 class="process">Our Process</h2>
+<div class="misc">	
 	<img src="resources/images/identify.svg">
 	<h3>Identify</h3>
 	<p>We focus on the most important details.</p>
 </div>	
-<div class="process">	
+<div class="misc">	
 	<img src="resources/images/understand.svg">
 	<h3>Understand</h3>
 	<p>We study our projects inside and out.</p>
 </div>
-<div class="process">	
+<div class="misc">	
 	<img src="resources/images/execute.svg">
 	<h3>Execute</h3>
 	<p>We put everything we have into our work.</p>
 </div>
 <div class="image">
-<h2>Designed in New York</h2>
+<h2 class="middle">Designed in New York</h2>
 </div>
 <div class="misc">	
 	<h3>Portfolio</h3>
@@ -59,11 +59,11 @@
 <div class="footer">
 <p>
         © Broadway 2017
-        <a class="btn-nav" href="#">Home</a>
-        <a class="btn-nav" href="#about">About</a>
-        <a class="btn-nav" href="#work">Work</a>
-        <a class="btn-nav" href="#team">Team</a>
-        <a class="btn-nav" href="#contact">Contact</a>
+        <a class="nav-btn" href="#">Home</a>
+        <a class="nav-btn" href="#about">About</a>
+        <a class="nav-btn" href="#work">Work</a>
+        <a class="nav-btn" href="#team">Team</a>
+        <a class="nav-btn" href="#contact">Contact</a>
 </p>
 </div>
 </body>
