Tiny edit to check git wincred

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div class="misc">	
 	<h3>Portfolio</h3>
-	<p>Coming Soon</p>
+	<p>Coming Soon.</p>
 </div>	
 <div class="misc">	
 	<h3>Team</h3>
